<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/options">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_keyboard"
                    android:icon="@drawable/ic_menu_keyboard"
                    android:title="@string/manually" />
                <item
                    android:id="@+id/nav_recently_used"
                    android:icon="@drawable/ic_menu_recently"
                    android:title="@string/last"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/order">
        <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_order"
                android:checkable="true"
                android:title="@string/order_default"/>
            <item
                android:id="@+id/nav_counter"
                android:checkable="true"
                android:title="@string/order_counter"/>
        </group>
        </menu>
    </item>


    <item android:title="@string/advanced">
        <menu>
            <item
                android:id="@+id/nav_auth"
                android:icon="@drawable/ic_menu_auth"
                android:title="@string/admin" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"

                android:visible="false"/>
        </menu>
    </item>

</menu>
